Adding user profile

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ USER_NAME=root
 PASSWORD=
 DATABASE=socket
 USER_TABLE_NAME=users
+USER_TOKEN_COLUMN=auth_key
 NODE_TLS_REJECT_UNAUTHORIZED=0
 APP_SECRET_KEY=15khf6@kfj
