--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ PORT=3000
 HOST=localhost
 USER_NAME=root
 PASSWORD=
-DATABASE=socket
+DATABASE=livechat
+DATABASE_PREFIX=ch_
 USER_TABLE_NAME=users
 USER_TOKEN_COLUMN=auth_key
 NODE_TLS_REJECT_UNAUTHORIZED=0
