--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "https": "^1.0.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.4",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
-    "socket.io": "^2.0.3",
+    "socket.io": "^3.1.1",
     "validatorjs": "^3.19.2"
   }
 }
